Delete all support: - Template for extra confirmation to delete all - Method to delete all products

--- a/acme/products/templates/products/product_changelist.html
+++ b/acme/products/templates/products/product_changelist.html
@@ -2,6 +2,7 @@
 
 {% block object-tools %}
     <a href="import-csv/">Import CSV</a>
+    <a href="delete-all/">Delete All</a>
 
     <br />
     {{ block.super }}
