Fix incorrect url in fetching url

--- a/acme/products/templates/products/csv_form.html
+++ b/acme/products/templates/products/csv_form.html
@@ -23,7 +23,7 @@
 })();
     function getSignedRequest(file){
   var xhr = new XMLHttpRequest();
-  xhr.open("GET", "/import-csv?file_name="+file.name+"&file_type="+file.type);
+  xhr.open("GET", "/admin/products/product/import-csv/?file_name="+file.name+"&file_type="+file.type);
   xhr.onreadystatechange = function(){
     if(xhr.readyState === 4){
       if(xhr.status === 200){
