--- a/acme/products/templates/products/csv_form.html
+++ b/acme/products/templates/products/csv_form.html
@@ -49,9 +49,9 @@ function uploadFile(file, s3Data, url){
 
   xhr.onreadystatechange = function() {
     if(xhr.readyState === 4){
+        alert(xhr.responseText);
       if(xhr.status === 200 || xhr.status === 204){
-        document.getElementById("preview").src = url;
-        document.getElementById("avatar-url").value = url;
+        document.getElementById("id_csv_file").src = url;
       }
       else{
         alert("Could not upload file.");
