--- a/acme/products/templates/products/csv_form.html
+++ b/acme/products/templates/products/csv_form.html
@@ -8,6 +8,7 @@
             <div class="progress-wrapper">
                 <div id="progress-bar-file" class="progress"></div>
             </div>
+            <input id="file-name" type="hidden" name="file-name"/>
             <button id="submit-button" type="submit" disabled>Upload CSV</button>
         </form>
     </div>
@@ -63,6 +64,7 @@ function uploadFile(file, s3Data, url){
         }
 
         if(e.loaded === e.total){
+            document.getElementById("file-name").value = file.name;
             document.getElementById("submit-button").disabled = false;
             $('#progress-bar-file').width(100 + '%').html(100 + '%');
         }
