Distinguish `Import CSV` and `Delete all` in products changelist page using color Move `CsvImportForm` to forms file

--- a/acme/products/static/products/css/products.css
+++ b/acme/products/static/products/css/products.css
@@ -6,3 +6,27 @@
     width:0%;
     padding:5px 0px 5px 0px;
 }
+.green-button {
+  background-color: #62af8b;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: left;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+.red-button {
+  background-color: #af1e30;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: right;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
