Optimizations:  - Validate that only csv files are uploaded  - Process csv file only if it has 'sku' column  - General code reformat
 fixes #4

--- a/acme/products/templates/products/csv_form.html
+++ b/acme/products/templates/products/csv_form.html
@@ -10,11 +10,13 @@
                 <div id="progress-bar-file" class="progress"></div>
             </div>
             <input id="file-name" type="hidden" name="file-name"/>
-            <button id="submit-button" type="submit" disabled>Import CSV</button>
+            <button id="submit-button" type="submit" disabled>Import CSV
+            </button>
         </form>
     </div>
-    <br />
-    <link rel="stylesheet" href="{% static 'products/css/products.css' %}" type="text/css" />
+    <br/>
+    <link rel="stylesheet" href="{% static 'products/css/products.css' %}"
+          type="text/css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
     <script src="{% static 'products/js/products.js' %}"></script>
 
