--- a/acme/products/templates/products/product_changelist.html
+++ b/acme/products/templates/products/product_changelist.html
@@ -5,7 +5,8 @@
     <a href="import-csv/" class="green-button">Import CSV</a>
     <a href="delete-all/" class="red-button">Delete All</a>
 
-    <br />
-    <link rel="stylesheet" href="{% static 'products/css/products.css' %}" type="text/css" />
+    <br/>
+    <link rel="stylesheet" href="{% static 'products/css/products.css' %}"
+          type="text/css"/>
     {{ block.super }}
 {% endblock %}
